influxdb_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: influxdb
 namespace: influxdb
 annotations:
   ingress.kubernetes.io/rewrite-target: /
   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
   nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
 rules:
 - http:
     paths: /influxdb
     - backend:
         serviceName: influxdb
         servicePort: 8086
