selenium-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: selenium-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - http:
      paths:
        - path: /selenium/chrome
          backend:
            serviceName: selenium-chrome-app
            servicePort: 4444
        - path: /selenium/firefox
          backend:
            serviceName: selenium-firefox-app
            servicePort: 4444
